--- a/sass/style.css
+++ b/sass/style.css
@@ -1,10 +1,110 @@
 body {
   background-color: #2b2d42;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: Verdana;
+  text-align: center;
+  color: #edf2f4;
 }
 
-.header {
+.titulo-fnt {
   color: #edf2f4;
+  font-family: Arial;
+  text-align: center;
+}
+
+.titulo-fnt span {
+  font-size: small;
+}
+
+.nav-bg {
+  background-color: #ef233c;
+}
+
+.navegacion-principal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 480px) {
+  .navegacion-principal {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.navegacion-principal a {
+  display: block;
+  text-align: center;
+  color: #edf2f4;
+  text-decoration: none;
   font-size: 20px;
-  background-color: #d90429;
+  font-weight: 700;
+  padding: 10px;
+  width: 100%;
+  border-radius: 20px;
+}
+
+.navegacion-principal a:hover {
+  color: #8d99ae;
+  transition: 0.5s;
+}
+
+.hero {
+  background-image: url(/img/hero_2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 410px;
+  position: relative;
+  margin-bottom: 20px;
+  color: #edf2f4;
+}
+
+.contenido-hero {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.25);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.iconos {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
+}
+
+.boton {
+  text-decoration: none;
+  color: #edf2f4;
+  background-color: #ef233c;
+  padding: 10px 30px;
+  border-radius: 10px;
+  font-weight: bold;
+  text-transform: uppercase;
+  border: none;
+  margin-top: 20px;
+  overflow: hidden;
+  transition: 0.5;
+}
+
+.boton:hover {
+  cursor: pointer;
+  background: #d90429;
+  box-shadow: 0 0 10px #d90429, 0 0 30px #d90429, 0 0 50px #d90429, 0 0 70px #d90429;
+  transition: 0.2s;
+}
+
+.servicios {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .servicios {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+  }
 }/*# sourceMappingURL=style.css.map */
